fix(css): wrap <code> text

--- a/src/css/globals.less
+++ b/src/css/globals.less
@@ -50,6 +50,8 @@ code {
   background-clip: padding-box;
   color: @secondary-text;
   background-color: @white;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 // Headings
